style.css
@import url('https://fonts.googleapis.com/css2?family=Cal+Sans&family=Oswald:wght@200..700&family=Staatliches&display=swap');

:root {
    --primary-color: #10E5B2;
    --primary-accent: #acfa70;
    --secondary-color: #FF6F52;
    --tertiary-color: #0B0C15;
}

/* All pages */
body {
    background-color: var(--tertiary-color);
}

header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 0;
    padding: 2rem 5rem;
    /* position: sticky;
    top: 0;
    width: 100%;
    box-sizing: border-box; */
    background-color: var(--tertiary-color);
}

header .title {
    position: relative;
    font-size: 40px;
    color: white;
    text-decoration: none;
    font-family: "Staatliches", sans-serif;
    font-weight: 400;
    font-style: normal;
}

header .title::after {
    content: "";
    position: absolute;
    left: 0;
    width: 0;
    height: 100%;
    background-image: linear-gradient(to right, var(--primary-color), var(--primary-accent));
    mix-blend-mode: darken;
    transition: all 500ms ease-in-out;
}

header .title:hover::after {
    width: 100%;
}

nav {
    display: flex;
    gap: 2rem;
}

nav a {
    position: relative;
    font-size: larger;
    text-decoration: none;
    color: white;
    font-family: "Oswald", sans-serif;
    font-optical-sizing: auto;
    font-weight: 200;
    font-style: normal;
}

nav a::after {
    content: "";
    position: absolute;
    left: 0;
    bottom: -4px;
    width: 0;
    height: 3px;
    transition: all 300ms ease-in-out;
}

nav a:hover::after {
    width: 100%;
}

nav .overall-tab::after {
    background-color: var(--primary-color);
}

nav .user-tab::after {
    background-color: #53ee9d;
}

nav .experience-tab::after {
    background-color: #80f586;
}

nav .bibliography-tab::after {
    background-color: var(--primary-accent);
}

nav a.active::after {
    width: 100%;
}

main {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0 5rem;
    /* height: 100vh; */
}

main .main-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
}

/* User Page */
.main-container .user-section {
    width: 100%;
    /* background-color: #FF6F52; */
}

.main-container .section-header {
    font-family: "Staatliches", sans-serif;
    font-weight: 400;
    font-style: normal;
    color: white;
}

.main-container .section-body {
    font-family: "Oswald", sans-serif;
    font-optical-sizing: auto;
    font-weight: 100;
    font-style: normal;
    font-size: x-large;
    color: white;
}

/* Bibliography Page */
.main-container .bib-section {
    width: 100%;
}

.bib-section a {
    color: var(--primary-accent);
}

.bib-section .section-header {
    position: relative;
    width: fit-content;
}

.bib-section .section-header::after {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    background-color: var(--primary-accent);
    width: 100%;
    height: 50%;
    mix-blend-mode: darken;
}

/* Overall Capstone Page */
.main-container .overall-section {
    width: 100%;
}

/* Capstone Experience Page */
.main-container .experience-section {
    width: 100%;
}

